--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -145,6 +145,13 @@ li a:hover {
     display: none;
 }
 
+#about ul {
+    list-style-type: none;
+    margin-left: 10px;
+    padding: 0;
+    display: block;
+}
+
 /* portfolio */
 #portfolio{
     display: none;
